<resources>
    <string name="app_name">Library Management</string>

    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="book_name">Tên sách</string>
    <string name="id_book">Mã sách</string>
    <string name="status">Tình trạng</string>
    <string name="type_book">Thể loại</string>
    <string name="author">Tác giả</string>
    <string name="publisher">Nhà xuất bản</string>
    <string name="publishing_year">Năm xuất bản</string>
    <string name="user_name">Tên người dùng</string>
    <string name="id_user">Mã độc giả</string>
    <string name="birthday">Ngày sinh</string>
    <string name="gender">Giới tính</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="rule_calendar">yyyy-MM-dd</string>
    <string name="category_book">Thể loại</string>

    <string name="man">Nam</string>
    <string name="woman">Nữ</string>
    <string name="amount">Số lượng</string>

    <string name="search_book">Tra cứu sách</string>
    <string name="info_user">Thông tin cá nhân</string>
    <string name="borrowed_book">Sách đã mượn</string>
    <string name="log_out">Đăng xuất</string>
    <string name="book_manager">Quản lý sách</string>
    <string name="reader_manager">Quản lý độc giả</string>
    <string name="borrowed_bill">Phiếu trả mượn sách</string>
    <string name="statistic">Thống kê</string>
    <string name="librarian_manager">Quản lý thủ thư</string>
    <string name="rule">Thay đổi quy định</string>

    <string name="id_bill">Mã phiếu</string>
    <string name="borrow_date">Ngày mượn</string>
    <string name="give_back_date">Ngày trả</string>

    <string name="save">Lưu</string>
    <string name="quantum">Số lượng</string>
    <string name="add">Thêm</string>
    <string name="edit">Chỉnh sửa</string>

    <string name="id_librarian">Mã thủ thư</string>
    <string name="list_empty">Danh sách rỗng</string>
    <string name="refresh">Làm mới</string>
    <string name="borrowed_book_rule">Quy định việc mượn sách</string>
    <string name="max_day">Số ngày mượn tối đa</string>
    <string name="max_book">Số sách mượn tối đa</string>
    <string name="fine">Tiền phạt</string>
    <string name="type_book_rule">Quy định thể loại sách</string>
    <string name="add_category">Thêm thể loại</string>
    <string name="name_category">Tên thể loại</string>
    <string name="edit_category">Chỉnh sửa thể loại</string>
    <string name="late_book">Sách trễ hạn</string>
    <string name="book_borrowed_the_most">Sách mượn nhiều nhất</string>
    <string name="reader_borrowed_the_most">Độc giả mượn nhiều nhất</string>
    <string name="change_password">Thay đổi mật khẩu cho lần đầu đăng nhập</string>
    <string name="name_reader">Tên độc giả</string>

</resources>